--- a/redux-tutorial/src/index.css
+++ b/redux-tutorial/src/index.css
@@ -31,6 +31,8 @@ transition: width 0.4s ease-in-out;
   cursor: pointer;
   margin: 10px;
   outline: none;
+  height: 30px;
+  width: 30px;
 }
 .btn:hover{
  background-color: red;
