--- a/redux-tutorial/src/index.css
+++ b/redux-tutorial/src/index.css
@@ -1,32 +1,32 @@
-*{
+* {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  background-color: antiquewhite;
+background-color: antiquewhite
 }
 
-.container{
+.container {
   border: 1px solid orange;
   margin: 10px;
   padding: 10px;
   text-align: center;
 }
 
-.book-input{
- margin: 4px 2px;
- padding: 0.5rem 1rem;
- border-radius: 4px;
- font-size: 16px;
-width: 130px;
-overflow: hidden;
-text-overflow: ellipsis;
-transition: width 0.4s ease-in-out;
+.book-input {
+  margin: 4px 2px;
+  padding: 0.5rem 1rem;
+  border-radius: 4px;
+  font-size: 16px;
+  width: 130px;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  transition: width 0.4s ease-in-out;
 }
-.book-input[type=text]:focus{
+.book-input[type="text"]:focus {
   width: 50%;
 }
 
-.btn{
+.btn {
   font-size: 1rem;
   cursor: pointer;
   margin: 10px;
@@ -34,40 +34,51 @@ transition: width 0.4s ease-in-out;
   height: 30px;
   width: 30px;
 }
-.btn:hover{
- background-color: red;
+.btn:hover {
+  background-color: red;
 }
-.submit-btn{
+.submit-btn {
   margin-top: 10px;
   padding: 1rem;
   font-size: 16px;
   width: 6rem;
   cursor: pointer;
-  background-color:aqua;
+  background-color: aqua;
   border-radius: 20%;
 }
 
-label{
+label {
   margin-right: 10px;
 }
 
 .book-lable,
 .book-author,
-.book-rating{
+.book-rating {
   margin-top: 1rem;
 }
 
-table,td{
+table,
+td {
   border: 1px solid;
   align-items: center;
   padding: 0.25rem;
 }
 
-.library{
+.library {
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 80vh;
   margin: 0 auto;
   margin-top: 1rem;
+}
+
+.header {
+  display: flex;
+  width: auto;
+  justify-content: space-between;
+}
+.user-btn {
+  border: none;
+  cursor: pointer;
 }
